# 1F

./: .gitignore  LICENSE  OneF.opam  README.md  TASK.md  dune-project
.github/workflows/: ci.yml
OneF/: .ocamlformat  dune-project
OneF/lib/: Ast.ml  Builtins.ml  Interpreter.ml  Lexemes.ml  Lexemes.mli  Lexer.ml  Lexer.mli  ParseTree.ml  Parser.ml  Runtime.ml  dune
OneF/test/: dune  tipec_tests.ml
example/: пример.1ф  пример.1ф.out
lib/: Ast.ml  Builtins.ml  Interpreter.ml  Lexemes.ml  Lexer.ml  Parser.ml  Runtime.ml  Tipec.ml  dune
test/: dune  lexer_tests.ml  test_interpreter.ml  test_interpreter.t  test_lexer.ml  test_lexer.t
test/example/: парсер.1ф  пример.1ф.out
