(test
 (name lexer_tests)
 (libraries OneF))

(executable
 (name test_lexer)
 (modules test_lexer)
 (public_name test_lexer)
 (libraries OneF)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_interpreter)
 (modules test_interpreter)
 (public_name test_interpreter)
 (libraries OneF)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps "./test_lexer.exe" "./test_interpreter.exe"))
